# dba

./: .gitignore  CLAUDE.md  README.md  components.json  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo
evals/: PROJECT.md  README.md  conftest.py  cost_tracker.py  pyproject.toml  quality_gate.py  run.sh
evals/.deepeval/: .deepeval_telemetry.txt
evals/harness/: agent_runner.py  bedrock_client.py  deepeval_bridge.py  gemini_client.py  gemini_runner.py  llm_client.py
evals/metrics/: custom_metrics.py
evals/optimization/: __init__.py  dataset.py  dspy_lm.py  dspy_metrics.py  dspy_modules.py  optimizer.py  prompt_writer.py  run_optimization.py
evals/prompts/: freeform.py  loader.py
evals/scenarios/: test_freeform.py  test_subagents.py
evals/scenarios/data/freeform_chat/: basic_qa.json  subagent_suggestion.json  tool_usage.json
evals/scenarios/data/subagents/: duplicate_detection.json  query_performance.json  security_audit.json  skew_analysis.json  space_usage.json  workload_management.json
evals/tools/: definitions.py  mocks.py
evals/tools/fixtures/base_columnDescription/: default.json
evals/tools/fixtures/base_readQuery/: count_result.json  dbc_allrightsv.json  dbc_allspacev.json  dbc_allspacev_perm.json  dbc_allspacev_spool.json  dbc_columnsv.json  dbc_indicesv.json  dbc_lockinfov.json  dbc_logonoffv.json  dbc_qrylog_objects.json  dbc_qrylog_steps.json  dbc_qrylogv.json  dbc_resusage_spma.json  dbc_resusage_svpr.json  dbc_sessioninfov.json  (+7 more)
(+307 files in other folders)
