[project]
name = "teradata-dba-evals"
version = "0.1.0"
description = "Multi-turn evaluation harness for Teradata DBA Agent system prompts and subagents"
requires-python = ">=3.11"
dependencies = [
    "anthropic[bedrock]>=0.80.0",
    "deepeval>=2.1.0",
    "dspy>=2.5",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "pyyaml>=6.0",
    "boto3>=1.35",
    "aiobotocore>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["scenarios"]
markers = [
    "eval: marks tests as eval tests",
    "llm_judge: tests that require LLM judge calls (expensive)",
    "live: tests that make real Bedrock LLM calls for agent responses",
]
timeout = 300

[tool.hatch.build.targets.wheel]
packages = ["prompts", "tools", "harness", "metrics", "scenarios", "optimization"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
